service2-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "service2.precocity-labs.services"
              routes:
              - match:
                  prefix: "/service"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "service2.precocity-labs.services"
              routes:
              - match:
                  prefix: "/service"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
               filename: "/etc/precocity-labs.crt"
              private_key:
               filename: "/etc/precocity-labs.key"
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
            verify_subject_alt_name:
            - service1.precocity-labs.services
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9150
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: egress_http
          route_config:
            name: service1_route
            virtual_hosts:
            - name: service1
              domains:
              - "service1.precocity-labs.services"
              routes:
              - match:
                  prefix: "/service"
                route:
                  cluster: service1_cluster
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
  - name: service1_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: service1.precocity-labs.services
        port_value: 443
    tls_context:
      common_tls_context:
        tls_certificates:
          - certificate_chain:
              filename: "/etc/precocity-labs.crt"
            private_key:
              filename: "/etc/precocity-labs.key"
        validation_context:
          trusted_ca:
            filename: /etc/ssl/certs/ca-certificates.crt
          verify_subject_alt_name:
          - service1.precocity-labs.services
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
